added functionality to locate button

--- a/index.html
+++ b/index.html
@@ -23,17 +23,23 @@
     	<div id="locate" class="location_button text-center">LOCATE</div>
     	<div id="map_holder"></div>
     	<div id="map_menu" class="text-center">
-    		<div id="menu_top" class="bottom_menu">
+    		<div id="map_menu_top" class="bottom_menu">
     			<span class="geo_enable">Confirm Location<br/>(you can drag marker to a different location)</span>
     		</div>
-    		<div id="menu_bottom" class="bottom_menu"><span class="geo_enable"><button id="confirm">CONFIRM</button></div>
+    		<div id="map_menu_bottom" class="bottom_menu"><span class="geo_enable"><button id="confirm">CONFIRM</button></div>
+    	</div>
+    	<div id="saved_menu" class="hide">
+    		<div id="saved_menu_top">
+    			<span>Location saved successfully.  Retrieve your saved location(s) by clicking 'Locate' and entering the username:</span>
+    		</div>
+    		<div id="saved_menu_bottom">
+    			<button id="saved_menu_mark">Mark another location.</button>
+    			<button id="saved_menu_locate">Locate location.</button>
+    		</div>
     	</div>
 	</section>
 </div>
-<hr />
-<footer id="footer" class="text-center">
-FOOTER
-</footer>
+<footer id="footer" class="text-center"><hr />FOOTER</footer>
 
 </body>
 
