additional features; reorganized code

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     		</div>
     		<div id="map_menu_bottom" class="bottom_menu"><span class="geo_enable"><button id="confirm">CONFIRM</button></div>
     	</div>
-    	<div id="saved_menu" class="hide">
-    		<div id="saved_menu_top">
-    			<span>Location saved successfully.  Retrieve your saved location(s) by clicking 'Locate' and entering the username:</span>
+    	<div id="action_menu" class="hide">
+    		<div id="action_menu_top">
+    			<span id="action_menu_message"></span>
     		</div>
-    		<div id="saved_menu_bottom">
-    			<button id="saved_menu_mark">Mark another location.</button>
-    			<button id="saved_menu_locate">Locate location.</button>
+    		<div id="action_menu_bottom">
+    			<button id="action_menu_mark">Mark location.</button>
+    			<button id="action_menu_locate">Find location.</button>
     		</div>
     	</div>
 	</section>
