--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
     	<div id="locate" class="location_button text-center">LOCATE</div>
     	<div id="map_holder"></div>
     	<div id="map_menu" class="text-center">
-    		<div id="map_menu_top" class="bottom_menu">
-    			<span class="geo_enable">Confirm Location<br/>(you can drag marker to a different location)</span>
-    		</div>
-    		<div id="map_menu_bottom" class="bottom_menu"><span class="geo_enable"><button id="confirm">CONFIRM</button></div>
-    	</div>
+    		<div id="map_menu_confirm">
+                <div class="margin10">
+        			<span>Confirm Location<br/>(you can drag marker to a different location)</span>
+        		</div>
+        		<div class="margin10"><span><button id="confirm">CONFIRM</button></div>
+            </div>
+    	
+        </div>
     	<div id="action_menu" class="hide">
     		<div id="action_menu_top">
     			<span id="action_menu_message"></span>
