add scroll buttons

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
         		</div>
         		<div class="margin10"><span><button id="confirm">CONFIRM</button></div>
             </div>
-    	
+            <div id="map_menu_found">
+                <div class="margin10">
+                    <div id="scroll_buttons">
+                        <button id="scroll_previous" class="float-left">Previous</button>
+                        <button id="scroll_next" class="float-right">Next</button>
+                    </div>
+                </div>
+            </div>
         </div>
     	<div id="action_menu" class="hide">
     		<div id="action_menu_top">
