little cool stuff

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <button id="scroll_previous" class="float-left">Previous</button>
                         <button id="scroll_next" class="float-right">Next</button>
                     </div>
+                    <div id="found_text"></div>
                 </div>
             </div>
         </div>
