--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <br/>
                     <button id="delete_button">Delete</button>
                 </div>
+                <button id="back_to_menu">Menu</button>
             </div>
         </div>
     	<div id="action_menu" class="hide">
