--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
 	<h2 class="text-center">MAKE YOUR MARK</h2>
 </header>
 <div id="container" class="center">
-	<section id="main">
-    	<div id="mark" class="location_button text-center">MARK</div>
-    	<div id="locate" class="location_button text-center">LOCATE</div>
-    	<div id="map_holder"></div>
+	<div id="main">
+        <div id="main_buttons_outer">
+            <div id="main_buttons_inner">
+    	       <div id="mark" class="location_button text-center">MARK</div>
+    	       <div id="locate" class="location_button text-center">LOCATE</div>
+            </div>
+    	</div>
+        <div id="map_holder"></div>
     	<div id="map_menu" class="text-center">
     		<div id="map_menu_confirm">
                 <div class="margin10">
@@ -50,7 +54,7 @@
     			<button id="action_menu_locate">Find location.</button>
     		</div>
     	</div>
-	</section>
+	</div>
 </div>
 <!-- <footer id="footer" class="text-center"><hr />FOOTER</footer> -->
 
