corrected google maps.  added delete all

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 
 <body>
 <header class="center">
-	<h2 class="text-center">MAKE YOUR MARK</h2>
+	<!-- <h2 class="text-center">MAKE YOUR MARK</h2> -->
+    <img class="land_textpic center" id="mym" src="img/mym.png" />
+    <!-- <img class="center hide" id="loading" src="img/loading.png" /> -->  
 </header>
 <div id="container" class="center">
 	<div id="main">
-        <div id="main_buttons_outer">
-            <div id="main_buttons_inner">
-    	       <div id="mark" class="location_button text-center">MARK</div>
-    	       <div id="locate" class="location_button text-center">LOCATE</div>
-            </div>
-    	</div>
+        <div id="mark" class="location_button text-center"><img src="img/mark.png" /></div>
+        <div id="locate" class="location_button text-center">LOCATE</div>
         <div id="map_holder"></div>
     	<div id="map_menu" class="text-center">
     		<div id="map_menu_confirm">
@@ -41,6 +39,7 @@
                     <div id="found_text"></div>
                     <br/>
                     <button id="delete_button">Delete</button>
+                    <button id="delete_all">Delete All</button>
                 </div>
                 <button id="back_to_menu">Menu</button>
             </div>
