--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <header class="center">
-	<!-- <h2 class="text-center">MAKE YOUR MARK</h2> -->
+	<h2 id="mym_text" class="text-center hide">MAKE YOUR MARK</h2>
     <img class="land_textpic center" id="mym" src="img/mym.png" />
     <!-- <img class="center hide" id="loading" src="img/loading.png" /> -->  
 </header>
@@ -28,7 +28,10 @@
                 <div class="margin10">
         			<span>Confirm Location<br/>(you can drag marker to a different location)</span>
         		</div>
-        		<div class="margin10"><span><button id="confirm">CONFIRM</button></div>
+        		<div class="margin10">
+                    <button id="confirm">MARK!</button>
+                    <button id="center">Find Marker</button>
+                </div>
             </div>
             <div id="map_menu_found">
                 <div class="margin10">
